<resources>
    <string name="app_name">SampleTdd</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>
